<resources>
    <string name="app_name">Save My Money</string>
    <string name="login">Ingresa</string>
    <string name="sign_up">Regístrate</string>
    <string name="login_email">Correo electrónico</string>
    <string name="login_password">Contraseña</string>
    <string name="login_go">Ingresar</string>
    <string name="login_error_model_null">Oops!</string>
    <string name="login_error_email_empty">Ingresa tu correo</string>
    <string name="login_error_email_invalid">Ingresa un correo válido</string>
    <string name="login_password_empty">Ingresa tu contraseña</string>
    <string name="login_failed">Correo electrónico o clave incorrectos</string>
    <string name="sign_up_success">Muy bien! Ahora ingresa tus datos</string>
    <string name="sign_up_failed">Datos incorrectos</string>
    <string name="sign_up_password_invalid">La contraseña debe tener al menos 6 caracteres</string>
    <string name="sign_up_user_collision">Este correo ya está siendo usado</string>
    <string name="sign_up_last_name">Apellidos</string>
    <string name="sign_up_first_name">Nombres</string>
    <string name="sign_up_error_model_null">Oops!</string>
    <string name="login_error_first_name_empty">Ingresa tus nombres</string>
    <string name="login_error_last_name_empty">Ingresa tu apellido</string>
    <string name="loading_login">Iniciando sesión</string>
    <string name="login_password_confirm">Confirmar contraseña</string>
    <string name="sign_up_password_not_match">Las contraseñas no coinciden</string>
    <string name="loading_signup">Registrando</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_incomes">Ingresos</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_exit">Salir</string>
    <string name="login_failed_user_not_exist">No existe un usuario con el correo ingresado</string>
    <string name="sign_up_accept_terms">Acepto los términos y condiciones</string>
    <string name="sign_up_not_accepted_terms">Debes aceptar los términos y condiciones</string>
    <string name="login_error_first_name_invalid">No es un nombre válido</string>
    <string name="login_error_last_name_invalid">No es un apellido válido</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_income_error">No pudimos acceder a los ingresos</string>
    <string name="main_income_loading">Verificando ingresos</string>
    <string name="main_income_not_exist_message">Primero debes registrar tus ingresos</string>
    <string name="success_title">Bien!</string>
    <string name="main_income_confirm_register">Ok, vamos</string>
    <string name="monto_nombre">Hola Bienvenido </string>
    <string name="monto_ingrese_monto">Ingrese el Monto</string>
    <string name="monto_periodo">Periodo</string>
    <string name="monto_fechaInicio">Fecha Inicio</string>
    <string name="monto_registrar">Guardar</string>
    <string name="monto_salir">Salir</string>
    <string name="ir_monto">Monto</string>
    <string name="monto_frequency">Frecuencia</string>
    <string name="monto_frequency_month">Mensual</string>
    <string name="monto_frequency_15_days">Quincenal</string>
    <string name="income_register_title">Registrar Ingresos</string>
    <string name="income_register_subtitle">Registra tus ingresos periódicos</string>
    <string name="income_invalid">El monto del ingreso debe ser mayor a 0.00</string>
    <string name="income_loading">Guardando ingreso</string>
    <string name="income_succes_save">Genial! ya estás listo para administrar tu dinero</string>
    <string name="income_confirm_save">Ok!</string>
    <string name="income_succes_save_main">Se guardó tu configuración de ingresos</string>
    <string name="main_category_loading">Cargando categorías</string>
    <string name="dummy_category_name">Categoría</string>
    <string name="amount_editor_accion_add">aumentar</string>
    <string name="amount_editor_accion_minus">disminuir</string>
    <string name="amount_editor_title">Ingrese el monto a</string>
    <string name="amount_editor_dialog_positive">Aceptar</string>
    <string name="amount_editor_dialog_negative">Cancelar</string>
    <string name="amount_editor_accion_change">cambiar</string>
    <string name="error_alert_title">Oops!</string>
    <string name="amount_editor_error_decrease">No puedes disminuir más del monto actual</string>
    <string name="dummy_category_amount">S/ 0.00</string>
    <string name="income_update_title">Configurar ingresos</string>
    <string name="main_income_title">Inicio</string>
    <string name="main_income_categories_text">Selecciona una categoría para asignar un monto o registrar un gasto</string>
    <string name="main_income_amount_title">Actualmente tienes para distribuir:</string>
    <string name="category_detail_title">Te quedan:</string>
    <string name="category_increase_error">No puedes incrementar por encima del monto principal</string>
    <string name="category_detail_spending_subtitle">Registra tu gasto</string>
    <string name="category_detail_spending_register">Registrar gasto</string>
    <string name="app_dialog_cancel">Cancelar</string>
    <string name="category_detail_date">Fecha</string>
    <string name="category_detail_description">Descripción (Opcional)</string>
    <string name="category_detail_amount">Monto</string>
    <string name="category_detail_amount_invalid">El monto debe ser mayor a 0.00</string>
    <string name="category_detail_amount_overflow">Sobrepasa el monto asignado</string>
    <string name="category_detail_success_register">Gasto guardado</string>
    <string name="app_caution">Cuidado!</string>
    <string name="category_detail_delete_item">¿Eliminar este gasto?</string>
    <string name="app_yes">Si</string>
    <string name="app_no">No</string>
    <string name="category_detail_success_deleted">Gasto eliminado</string>
    <string name="login_failed_network_error">No se pudo conectar. Revisa tu conexión a internet</string>
    <string name="amount_editor_error_amount">Ingresa un monto mayor a 0.00</string>
    <string name="category_assigned_reference_format">Asignado: %s</string>
    <string name="category_name">Nombre</string>
    <string name="category_color">Color</string>
    <string name="category_icon">Icono</string>
    <string name="category_register">Guardar</string>
    <string name="category_new">Nueva Categoría</string>
    <string name="category_select_icon_title">Selecciona un icono</string>
    <string name="category_name_exists_error">Ya existe una categoría con ese nombre</string>
    <string name="category_success_save">Categoría creada</string>
    <string name="category_unable_to_delete_default">No puedes eliminar una categoría predeterminada</string>
    <string name="category_delete_confirm">Sí</string>
    <string name="category_delete_confirm_message_fmt">¿Quieres eliminar la categoría %s?</string>
    <string name="category_delete_has_detail_error">La categoría tiene gastos registrados, no es posible eliminarla</string>
    <string name="category_deleted_message">Categoría eliminada</string>
    <string name="huy_message_title">Huy!</string>
    <string name="chihuan_message">Te quedaste Chihuán 😢</string>
    <string name="wait_message_title">Espera!</string>
    <string name="assign_amount_is_posible_message">Aún puedes asignar dinero a esta categoría 😎</string>
    <string name="menu_reports">Reportes</string>
    <string name="graphic_category_pie_title">Gastos por categoría</string>
    <string name="graphic_no_data_text">No hay información disponible para este gráfico</string>
    <string name="graphic_spending_history_title">Historial de gastos</string>
    <string name="graphic_saving_title">Ahorros</string>
    <string name="year_month_picker_dialogo_title">Selecciona año y mes</string>
    <string name="history_empty_result">No hay gastos registrados en este mes</string>

    <string name="menu_goals">Meta</string>
    <string name="goal_title">Meta</string>
    <string name="goal_progress_title">Meta</string>
    <string name="string_goals">Tienes Ahorrado:</string>
    <string name="string_goals_amaunt"> Monto a llegar</string>
    <string name="string_goals_saving">Ahorros:</string>
    <string name="string_goals_register">Guardar</string>

    <string name="string_goals_description">Describe tu Meta</string>
    <string name="goal_invalid_amount">Ingresa un monto mayor a 0.00</string>
    <string name="goal_invalid_description">Ingrese una descripción</string>
    <string name="goal_alert_title">¿Deseas registrar la Meta?</string>
    <string name="goal_alert_progress_title">¿Deseas visualizar tu Progreso?</string>
    <string name="goal_goals_progress_update">Actualizar</string>
    <string name="goal_goals_progress_cancel">Cancelar</string>
    <string name="goal_goals_decrease">Gastar de mis Ahorros</string>
    <string name="goal_goals_decrease_quest">¿Deseas Gastar de tus Ahorros?</string>
    <string name="goal_goals_decrease_title">Se Gasto de tus Ahorros</string>
    <string name="goal_alert_loading">Guardando Meta...</string>
    <string name="goal_alert_confirm_title">Exito!</string>
    <string name="goal_alert_confirm_context">Se guardó correctamente tu meta</string>
    <string name="goal_alert_delete_title">¿Desea eliminar esta Meta?</string>
    <string name="goal_alert_delete">Meta Eliminada!</string>
    <string name="goal_button_delete">Ya no quiero!</string>
    <string name="goal_alert_goal_achieved_title">Ya lo tienes!</string>
    <string name="goal_alert_goal_achieved_des">Tienes suficiente dinero para comprarlo!</string>
    <string name="goal_alert_goal_congratulations_title">Felicitaciones!😎</string>
    <string name="goal_alert_goal_congratulations_des">Alcanzaste tu Meta de \n</string>

</resources>
