<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_incomes"
            android:icon="@drawable/ic_trending_up_black_24dp"
            android:title="@string/menu_incomes" />

        <item
            android:id="@+id/nav_goal"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/menu_goals" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_insert_chart_black_24dp"
            android:title="@string/menu_reports" />
    </group>

    <group android:id="@+id/otherOptionsMenu">
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_exit" />
    </group>

</menu>
