<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:activity=".monto.MontoFragment">

    <data>

        <variable
            name="presenter"
            type="com.demo.savemymoney.monto.MontoFragmentPresenter" />
    </data>

    <LinearLayout
        android:id="@+id/id_fragmente_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingTop="20dp"
        android:paddingEnd="40dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/monto_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ru.kolotnev.formattedittext.CurrencyEditText
                android:id="@+id/txt_Monto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/monto_ingrese_monto"
                android:inputType="numberDecimal"
                app:currency="PEN"
                app:locale="es" />
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/monto_frequency_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monto_frequency" />

            <RadioButton
                android:id="@+id/monto_mensual_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monto_frequency_month"
                android:textIsSelectable="true" />

            <RadioButton
                android:id="@+id/monto_quincenal_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monto_frequency_15_days"
                android:textIsSelectable="true" />
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_Fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/monto_fechaInicio"
                android:inputType="date" />
        </android.support.design.widget.TextInputLayout>

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->presenter.saveIncome()}"
            android:text="@string/monto_registrar" />

    </LinearLayout>


</layout>