<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:activity=".signup.SignUpFragment">

    <data>

        <variable
            name="user"
            type="com.demo.savemymoney.signup.SignUpViewModel" />

        <variable
            name="presenter"
            type="com.demo.savemymoney.signup.SignUpFragmentPresenter" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="40dp"
            android:paddingTop="20dp"
            android:paddingEnd="40dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/firstNameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/firstNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/sign_up_first_name"
                    android:inputType="textPersonName"
                    android:text="@={user.firstName}"
                    tools:targetApi="o" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lastNameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/lastNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/sign_up_last_name"
                    android:inputType="textPersonName"
                    android:text="@={user.lastName}"
                    tools:targetApi="o" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailSignUpInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/login_email"
                    android:inputType="textEmailAddress"
                    android:text="@={user.email}"
                    tools:targetApi="o" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordSignUpInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:text="@={user.password}"
                    tools:targetApi="o" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordConfirmInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/passwordConfirmEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/login_password_confirm"
                    android:inputType="textPassword"
                    android:text="@={user.passwordConfirm}"
                    tools:targetApi="o" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@={user.acceptTerms}"
                android:text="@string/sign_up_accept_terms" />

            <Button
                android:id="@+id/button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()->presenter.signUp(user)}"
                android:text="@string/sign_up" />
        </LinearLayout>
    </ScrollView>

</layout>