<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_montofragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".monto.MontoFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/id_fragmente_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >


        <TextView
            android:id="@+id/tv_Monto"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="44dp"
            android:layout_marginTop="40dp"
            android:text="@string/monto_nombre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txt_Monto"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"

            android:layout_marginStart="32dp"
            android:layout_marginTop="52dp"
            android:ems="10"
            android:hint="@string/monto_ingrese_monto"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_Monto" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="277dp"
            android:layout_height="37dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="32dp"
            android:layout_marginTop="44dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_Monto" />

        <EditText
            android:id="@+id/txt_Fecha"
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center_horizontal"
            android:hint="@string/monto_fechaInicio"
            android:inputType="date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <Button
            android:id="@+id/button4"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:layout_marginEnd="116dp"
            android:text="@string/monto_salir"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_Fecha" />

        <Button
            android:id="@+id/button3"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="92dp"
            android:layout_marginEnd="8dp"
            android:text="@string/monto_registrar"
            app:layout_constraintEnd_toStartOf="@+id/button4"
            app:layout_constraintHorizontal_bias="0.363"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_Fecha" />



    </android.support.constraint.ConstraintLayout>




</FrameLayout>