<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout  xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    tools:activity=".goal.GoalFragment" android:layout_height="match_parent"
    android:layout_width="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="305dp"
        android:orientation="vertical">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/string_goals"
            android:textSize="24sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/string_goals_saving"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/cash_saving"
                android:layout_width="264dp"
                android:layout_height="82dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:padding="10dp"

                android:textSize="17sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/mouth_goal"
                    android:layout_width="414dp"
                    android:layout_height="65dp"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/string_goals_amaunt"
                    android:inputType="date" />
            </android.support.design.widget.TextInputLayout>

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/string_goals_register" />
        </LinearLayout>






    </LinearLayout>






</android.support.design.widget.CoordinatorLayout >